# Liberta-Backoffice

./: .gitignore  README.md  package.json  sync-docs.sh  vercel.json
apps/api-teto-rpv/alembic/: env.py
apps/api-teto-rpv/app/: database.py
apps/api-teto-rpv/app/models/: __init__.py  jurisdiction.py  minimum_salary.py
apps/api-teto-rpv/app/services/: ai_agent.py  ceiling_calc.py  normalizer.py
apps/api-teto-rpv/scripts/: seed.py
apps/web/: dash-comercial.md  package.json
apps/web/src/: App.jsx  ThemeContext.jsx  index.css  supabase.js
apps/web/src/pages/: Juridico.jsx  (+7 more)
dashboard/: package-lock.json
dashboard/src/: App.jsx  ThemeContext.jsx
dashboard/src/components/: DateRangePicker.jsx
dashboard/src/pages/: Comercial.jsx  FunilCompleto.jsx  InteligenciaMercado.jsx  MetaAds.jsx  TetoRPV.jsx
docs/: pre-qualificacao-rpv.md
docs/data-infra/: ROADMAP.md
docs/data-infra/migrations/: 001_create_pipe_tables.sql  002_add_missing_columns.sql  003_cleanup.sql  004_add_is_test_flag.sql
docs/inteligencia-mercado/: bloco0-glossario.md  bloco1-tetos-rpv-por-ente.md  bloco2-teses-por-natureza.md  bloco3-jurimetria.md  bloco6-fluxo-operacional.md  inteligencia-mercado-rpv.md
inteligencia-mercado/: bloco4-due-diligence.md  bloco5-tributacao-estruturacao.md
scripts/: run-migration.mjs
teto-rpv/: pyproject.toml
teto-rpv/alembic/versions/: 0001_initial_schema.py
teto-rpv/app/: config.py  main.py
teto-rpv/app/api/v1/: schemas.py
teto-rpv/app/models/: ceiling.py  research_log.py
teto-rpv/data/seed_data/: states.json
teto-rpv/scripts/: import_ibge.py
(+7 files in other folders)
